# KmiDi

./: ._.gitignore  .editorconfig  .gitignore  ARCHITECTURE_REVIEW_2025-12-30.md  CHANGES_2025-12-30.md  CMakeLists.txt  CODEBASE_REVIEW.md  HOW_TO_DEV_OP_101.md  KmiDi-dev-mac.code-workspace  ONEDRIVE_INTEGRATION_LOG.md  ONEDRIVE_ITEMS_SUMMARY.md  README.md  ROADMAP_Implementation.md  env.example  example_grief_automation.json  pyproject.toml  streamlit_app.py  test_streamlit_generation.py  vite.config.ts
KmiDi_FINAL/: CMakeLists.txt  CONSOLIDATION_NOTES.md
KmiDi_FINAL/_build/: .ninja_deps  .ninja_log  build.ninja
KmiDi_FINAL/_build/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
KmiDi_FINAL/_build/KellyApp_autogen/: deps
KmiDi_FINAL/build_out/: .ninja_deps  .ninja_log  build.ninja  juce_vst3_helper
KmiDi_FINAL/build_out/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
KmiDi_FINAL/build_out/KellyApp_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
KmiDi_FINAL/docs/: React_Component_Integration.md
KmiDi_FINAL/docs/audit/: build_verification_report.md  standalone_compliance_audit.md
KmiDi_FINAL/docs/specs/: 01_FOUNDATION_SYSTEM_UI.md  03_VISUAL_SYSTEM.md  07_PLUGIN_SPECIFIC.md  08_OUTPUT_VERIFICATION.md  09_DOCUMENTATION_REPO.md
KmiDi_FINAL/engine/cpp_music_brain/: CMakeLists.txt
KmiDi_FINAL/engine/src/: BridgeClient.cpp  CMakeLists.txt
KmiDi_FINAL/engine/src_penta-core/: CMakeLists.txt
KmiDi_FINAL/ml/models/: groovepredictor.json
KmiDi_FINAL/python/: pyproject.toml
KmiDi_FINAL/python/kmidi_gui/: requirements.txt
KmiDi_FINAL/python/mcp_todo/: storage.py
KmiDi_FINAL/python/mcp_workstation/: __init__.py  ai_specializations.py  audio_generation_engine.py  orchestrator.py
KmiDi_PROJECT/: .pre-commit-config.yaml  ARCHITECTURE_REVIEW_2025-12-30.md  AUDIO_MIDI_DATA_REVIEW.md  BUILD_STATUS.md  CHANGES_2025-12-30.md  CMakeLists.txt  CODEBASE_REVIEW.md  COPILOT_INSTRUCTIONS.md  FINAL_DATASET_STATUS.md  FINAL_VERIFICATION.md  IMPLEMENTATION_PLAN_NEXT_STEPS.md  ISSUES_REPORT.md  KMIDI_CONSOLIDATION_SUMMARY.md  KMIDI_STRUCTURE_PLAN.md  MISSING_AUDIO_DATASETS_REPORT.md  MISSING_DATA_REPORT.md  NEXT_STEPS.md  PROJECT_BACKUP_CORE_CRITERIA.json  PROJECT_BACKUP_CORE_CRITERIA.md  PROJECT_COMPLETION_PLAN.md  PROJECT_MAIN.md  PROJECT_QUICK_START.md  QUICK_START_GUIDE.md  README.md  README_STREAMLIT.md  RECOMMENDATIONS_Improvements.md  SETUP_GUIDE.md  _manifest.py  audio_embeddings.py  bindings  build_test  cache_audio_manifest.py  check_datasets.py  cleanup_analysis.md  emotion_trajectory.json  env.example  generate_test_midi.py  iDAW-Android  install_kaggle_credentials.sh  kaggle_setup_instructions.md  (+18 more)
KmiDi_PROJECT/.venv312/: pyvenv.cfg
KmiDi_PROJECT/api/: Dockerfile  docker-compose.yml  main.py
KmiDi_PROJECT/assets/audio/: README.md
KmiDi_PROJECT/benchmarks/: bench_harmony.cpp  groove_latency.cpp  harmony_latency.cpp
KmiDi_PROJECT/config/: drum_analysis.json  dynamics_engine.yaml  emotion_node_classifier.yaml  harmony_predictor.yaml  humanizer.json  improved_training_config.yaml  melody_transformer.yaml  music_foundation_base.yaml  orchestration_local_metal.yaml  train-mac-smoke.yaml
KmiDi_PROJECT/configs/: config_loader.py
KmiDi_PROJECT/data/: emotion_instrument_library_catalog.json  harmony_generator.py
KmiDi_PROJECT/data/cultural/: maqam_emotion_map.json  pentatonic_emotion_map.json
KmiDi_PROJECT/deployment/docker/: Dockerfile.prod
KmiDi_PROJECT/deployment/scripts/: deploy-linux.sh  deploy-macos.sh  deploy-windows.ps1
KmiDi_PROJECT/docs/: API_DOCUMENTATION.md  BETA_FEEDBACK_FORM.md  CODE_SIGNING.md  COMPLETION_SUMMARY.md  CPP_TEST_STATUS.md  CROSS_CULTURAL_VALIDATION.md  DATA_LOCATION_UPDATE_2025-01-09.md  DEPENDENCY_SETUP_GUIDE.md  DEPLOYMENT_GUIDE.md  DOCKER_OPTIMIZATION.md  E2E_TEST_STATUS.md  HEALTH_MONITORING.md  M4_LOCAL_MODELS_GUIDE.md  MEMORY_PROFILING.md  MISSING_SEGMENTS_ANALYSIS.md  MK_TRAINING_GUIDELINES.md  P0-1_MODEL_EXPORT_STATUS.md  P0-2_ML_TEST_COVERAGE_STATUS.md  P1-11_STREAMLIT_DEMO_STATUS.md  P1-7_PHASE_VOCODER_STATUS.md  P1-9_QT_GUI_COMPLETION_STATUS.md  PERFORMANCE_BENCHMARKING.md  PROJECT_INFORMATION_SOURCES.md  QT_GUI_TEST_STATUS.md  QUICKSTART.md  QUICKSTART_GUIDE.md  RELEASE_NOTES_TEMPLATE.md  STREAMLIT_TEST_STATUS.md  TEST_DIAGNOSIS_SUMMARY.md  UI_REDESIGN_Qt.md
KmiDi_PROJECT/docs/api/: API_REFERENCE.md
KmiDi_PROJECT/docs/architecture/: local_orchestration.md
KmiDi_PROJECT/docs/beta/: BETA_RECRUITMENT.md  FEEDBACK_SYSTEM.md
KmiDi_PROJECT/docs/cli/: CLI_GUIDE.md
KmiDi_PROJECT/docs/deployment/: DEPLOYMENT_GUIDE.md  environment-variables.md
KmiDi_PROJECT/docs/gui/: GUI_MANUAL.md
KmiDi_PROJECT/docs/integrations/: python_cpp_bridge.md
KmiDi_PROJECT/docs/ml/: TRAINING_INSIGHTS.md
KmiDi_PROJECT/docs/performance/: GROOVE_BENCHMARKS.md  MEMORY_ANALYSIS.md  benchmark_results.json
KmiDi_PROJECT/docs/previews/: README.md
KmiDi_PROJECT/examples/: spectocloud_animation.py
KmiDi_PROJECT/models/: validation_results.json
KmiDi_PROJECT/scripts/: ai_training_orchestrator.py  benchmark_performance.py  bulk_download_data.py  dataset_loaders.py  dataset_pipeline.py  download_emotion_datasets.sh  emotion_helper.py  eval_audio_emotion.py  export_models.py  fix_juce_cmake.sh  fix_juce_complete.sh  generate_plugins.py  idaw_ableton_ui.py  infer_emotion_from_manifest.py  libcxx.py  local_train.sh  prepare_chord_dataset.py  prepare_datasets.py  pretrain_foundation.py  run_emotion_eval.sh  run_local_orchestrator.py  run_tests_fast.py  safe_extended_training.py  sample_downloader.py  sanitize_datasets.py  setup_ml_env.sh  setup_ssh_tunnel.sh  ssh_server_for_codespaces.sh  test_e2e_generation.py  test_qt_gui.py  test_streamlit_app.py  train.py  train_cuda_v2.sh  train_model.py  train_mps_stub.py  train_text_to_vai.py  upload_to_b2.sh  validate_configs.py  validate_model_inference.py  verify_and_integrate_models.py  (+1 more)
KmiDi_PROJECT/scripts/deploy/: README.md  deploy-macos.sh  deploy.sh
KmiDi_PROJECT/tests/api/: test_spectocloud_api.py
penta_build/: CMakeLists.txt  penta_core_tests_include-b12d07c.cmake
(+993 files in other folders)
