[package]
name = "kmidi"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
cpal = "0.15"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[lib]
name = "kmidi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
